// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.query;

import "floecat/query/sql_objects.proto";

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.query.rpc";

message BuiltinRegistry {
  repeated SqlFunction  functions   = 1;
  repeated SqlOperator  operators   = 2;
  repeated SqlType      types       = 3;
  repeated SqlCast      casts       = 4;
  repeated SqlCollation collations  = 5;
  repeated SqlAggregate aggregates  = 6;
}

message GetBuiltinCatalogRequest {
  string engine_kind = 1;
  string engine_version = 2;
}

message GetBuiltinCatalogResponse {
  BuiltinRegistry registry = 1;
}

service BuiltinCatalogService {
  rpc GetBuiltinCatalog(GetBuiltinCatalogRequest) returns (GetBuiltinCatalogResponse);
}